--- a/notebooks/python/IntermediateDeepLearningWithPytorch.ipynb
+++ b/notebooks/python/IntermediateDeepLearningWithPytorch.ipynb
@@ -326,7 +326,7 @@
     "    dataset_test,\n",
     "    batch_size=2,\n",
     "    shuffle=True,\n",
-    "generator=torch.Generator(device=device),\n",
+    "    generator=torch.Generator(device=device),\n",
     ")"
    ]
   },
@@ -470,7 +470,6 @@
    "metadata": {},
    "source": [
     "Activation functions\n",
-    "* Often used as the default activation\n",
     "* `nn.functional.elu()`\n",
     "* `nn.functional.relu()`"
    ]
@@ -575,8 +574,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(image)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -596,8 +594,7 @@
     "dataset_train = ImageFolder(\n",
     "    \"data/clouds/train\",\n",
     "    transform=train_transforms,\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
@@ -944,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dcfb33bc-2ab0-4c60-8770-73ba47f383fa",
    "metadata": {},
    "outputs": [],
@@ -954,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "507dccf9-2c56-499c-9f3b-01907262bbfd",
    "metadata": {},
    "outputs": [],
@@ -965,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fe5e9a87-9a21-4788-9a17-b684170d462b",
    "metadata": {},
    "outputs": [],
@@ -987,136 +984,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d1770396-b55d-4ba0-ae6f-39a5aa1faf1c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>consumption</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-01-01 00:15:00</td>\n",
-       "      <td>-0.704319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-01 00:30:00</td>\n",
-       "      <td>-0.704319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-01-01 00:45:00</td>\n",
-       "      <td>-0.678983</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-01-01 01:00:00</td>\n",
-       "      <td>-0.653647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-01-01 01:15:00</td>\n",
-       "      <td>-0.704319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105210</th>\n",
-       "      <td>2013-12-31 22:45:00</td>\n",
-       "      <td>-0.932595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105211</th>\n",
-       "      <td>2013-12-31 23:00:00</td>\n",
-       "      <td>-0.907259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105212</th>\n",
-       "      <td>2013-12-31 23:15:00</td>\n",
-       "      <td>-0.932595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105213</th>\n",
-       "      <td>2013-12-31 23:30:00</td>\n",
-       "      <td>-0.932595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105214</th>\n",
-       "      <td>2013-12-31 23:45:00</td>\n",
-       "      <td>-0.932595</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>105215 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  timestamp  consumption\n",
-       "0       2011-01-01 00:15:00    -0.704319\n",
-       "1       2011-01-01 00:30:00    -0.704319\n",
-       "2       2011-01-01 00:45:00    -0.678983\n",
-       "3       2011-01-01 01:00:00    -0.653647\n",
-       "4       2011-01-01 01:15:00    -0.704319\n",
-       "...                     ...          ...\n",
-       "105210  2013-12-31 22:45:00    -0.932595\n",
-       "105211  2013-12-31 23:00:00    -0.907259\n",
-       "105212  2013-12-31 23:15:00    -0.932595\n",
-       "105213  2013-12-31 23:30:00    -0.932595\n",
-       "105214  2013-12-31 23:45:00    -0.932595\n",
-       "\n",
-       "[105215 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "78959242-b0fe-4035-9e5f-9f33f08e4140",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(105119, 96) (105119,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TensorDataset\n",
     "# Create training examples\n",
@@ -1129,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "917c278e-6959-41dc-9aa4-be5b0641d4ef",
    "metadata": {},
    "outputs": [],
@@ -1185,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "57b76336-7176-493d-818e-3ddaca2f95b9",
    "metadata": {},
    "outputs": [],
@@ -1196,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "939fd3a2-8d7b-4e61-97b8-52e6df5cd344",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a89da1df-88cc-4cb3-8afd-1197a8d69512",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9dd374f5-2980-42fe-afc9-a365d1d81abf",
    "metadata": {},
    "outputs": [],
@@ -1274,18 +1155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "09d56d71-2754-4a42-9f46-03abb5cb9481",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Training loop\n",
     "for seqs, labels in dataloader_train:\n",
@@ -1296,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "70588ccd-4e0a-4f7a-adf9-c0802af1b752",
    "metadata": {},
    "outputs": [],
@@ -1468,6 +1341,11 @@
    "outputs": [],
    "source": [
     "# Training loop\n",
+    "# Training data consists of three items:\n",
+    "# Image\n",
+    "# Alphabet vector\n",
+    "# Labels\n",
+    "# We pass the model images and alphabets\n",
     "net = Net()\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
@@ -1477,13 +1355,7 @@
     "        outputs = net(img, alpha)\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "# Training data consists of three items:\n",
-    "# Image\n",
-    "# Alphabet vector\n",
-    "# Labels\n",
-    "# We pass the model images and alphabets"
+    "        optimizer.step()"
    ]
   },
   {
@@ -1501,33 +1373,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Two-output Dataset\n",
+    "# Two-output Dataset\n",
     "class OmniglotDataset(Dataset):\n",
-    "def __init__(self, transform, samples):\n",
-    "self.transform = transform\n",
-    "self.samples = samples\n",
+    "    def __init__(self, transform, samples):\n",
+    "        self.transform = transform\n",
+    "        self.samples = samples\n",
     "\n",
-    "We can use the same Dataset...\n",
-    "...with updated samples:\n",
-    "print(samples[0])\n",
+    "    def __len__(self):\n",
+    "        return len(self.samples)\n",
     "\n",
-    "def __len__(self):\n",
-    "return len(self.samples)\n",
-    "\n",
-    "[(\n",
-    "'omniglot_train/.../0459_14.png',\n",
-    "\n",
-    "def __getitem__(self, idx):\n",
-    "img_path, alphabet, label = \\\n",
-    "self.samples[idx]\n",
-    "\n",
-    "0,\n",
-    "0,\n",
-    ")]\n",
-    "\n",
-    "img = Image.open(img_path).convert('L')\n",
-    "img = self.transform(img)\n",
-    "return img, alphabet, label"
+    "    def __getitem__(self, idx):\n",
+    "        img_path, alphabet, label = self.samples[idx]\n",
+    "        img = Image.open(img_path).convert('L')\n",
+    "        img = self.transform(img)\n",
+    "        return img, alphabet, label\n"
    ]
   },
   {
@@ -1537,31 +1396,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Two-output architecture\n",
+    "# Two-output architecture\n",
     "class Net(nn.Module):\n",
-    "def __init__(self, num_alpha, num_char):\n",
-    "super().__init__()\n",
-    "self.image_layer = nn.Sequential(\n",
-    "nn.Conv2d(1, 16, kernel_size=3, padding=1),\n",
-    "nn.MaxPool2d(kernel_size=2),\n",
-    "nn.ELU(),\n",
-    "nn.Flatten(),\n",
-    "nn.Linear(16*32*32, 128)\n",
-    "\n",
-    "Define image-processing sub-network\n",
-    "Define output-specific classifiers\n",
-    "Pass image through dedicated sub-network\n",
-    "Pass the result through each output layer\n",
-    "Return both outputs\n",
-    "\n",
-    ")\n",
-    "self.classifier_alpha = nn.Linear(128, 30)\n",
-    "self.classifier_char = nn.Linear(128, 964)\n",
-    "def forward(self, x):\n",
-    "x_image = self.image_layer(x)\n",
-    "output_alpha = self.classifier_alpha(x_image)\n",
-    "output_char = self.classifier_char(x_image)\n",
-    "return output_alpha, output_char"
+    "    def __init__(self, num_alpha, num_char):\n",
+    "        super().__init__()\n",
+    "        self.image_layer = nn.Sequential(\n",
+    "            nn.Conv2d(1, 16, kernel_size=3, padding=1),\n",
+    "            nn.MaxPool2d(kernel_size=2),\n",
+    "            nn.ELU(),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(16*32*32, 128)\n",
+    "        )\n",
+    "        self.classifier_alpha = nn.Linear(128, 30)\n",
+    "        self.classifier_char = nn.Linear(128, 964)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x_image = self.image_layer(x)\n",
+    "        output_alpha = self.classifier_alpha(x_image)\n",
+    "        output_char = self.classifier_char(x_image)\n",
+    "        return output_alpha, output_char\n"
    ]
   },
   {
@@ -1571,27 +1424,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Training loop\n",
+    "# Training loop\n",
     "for epoch in range(10):\n",
-    "for images, labels_alpha, labels_char \\\n",
-    "in dataloader_train:\n",
-    "optimizer.zero_grad()\n",
-    "outputs_alpha, outputs_char = net(images)\n",
-    "loss_alpha = criterion(\n",
-    "\n",
-    "Model produces two outputs\n",
-    "Calculate loss for each output\n",
-    "Combine the losses to one total loss\n",
-    "Backprop and optimize with the total loss\n",
-    "\n",
-    "outputs_alpha, labels_alpha\n",
-    ")\n",
-    "loss_char = criterion(\n",
-    "outputs_char, labels_char\n",
-    ")\n",
-    "loss = loss_alpha + loss_char\n",
-    "loss.backward()\n",
-    "optimizer.step()"
+    "    for images, labels_alpha, labels_char in dataloader_train:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs_alpha, outputs_char = net(images)\n",
+    "        loss_alpha = criterion(\n",
+    "            outputs_alpha, labels_alpha\n",
+    "        )\n",
+    "        loss_char = criterion(\n",
+    "            outputs_char, labels_char\n",
+    "        )\n",
+    "        loss = loss_alpha + loss_char\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
    ]
   },
   {
@@ -1609,37 +1455,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Model evaluation\n",
+    "# Model evaluation\n",
     "acc_alpha = Accuracy(\n",
-    "task=\"multiclass\", num_classes=30\n",
+    "    task=\"multiclass\", num_classes=30\n",
     ")\n",
     "acc_char = Accuracy(\n",
-    "task=\"multiclass\", num_classes=964\n",
+    "    task=\"multiclass\", num_classes=964\n",
     ")\n",
+    "\n",
     "net.eval()\n",
     "with torch.no_grad():\n",
-    "for images, labels_alpha, labels_char \\\n",
-    "in dataloader_test:\n",
+    "    for images, labels_alpha, labels_char in dataloader_test:\n",
+    "        out_alpha, out_char = net(images)\n",
+    "        _, pred_alpha = torch.max(out_alpha, 1)\n",
+    "        _, pred_char = torch.max(out_char, 1)\n",
+    "        acc_alpha(pred_alpha, labels_alpha)\n",
+    "        acc_char(pred_char, labels_char)\n",
     "\n",
-    "Set up metric for each output\n",
-    "Iterate over test loader and get outputs\n",
-    "Calculate prediction for each output\n",
-    "Update accuracy metrics\n",
-    "Calculate final accuracy scores\n",
     "print(f\"Alphabet: {acc_alpha.compute()}\")\n",
-    "print(f\"Character: {acc_char.compute()}\")\n",
-    "\n",
-    "out_alpha, out_char = net(images)\n",
-    "_, pred_alpha = torch.max(out_alpha, 1)\n",
-    "\n",
-    "Alphabet: 0.3166305720806122\n",
-    "\n",
-    "_, pred_char = torch.max(out_char, 1)\n",
-    "\n",
-    "Character: 0.24064336717128754\n",
-    "\n",
-    "acc_alpha(pred_alpha, labels_alpha)\n",
-    "acc_char(pred_char, labels_char)"
+    "print(f\"Character: {acc_char.compute()}\")        "
    ]
   },
   {
@@ -1649,35 +1483,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Multi-output training loop revisited\n",
+    "# Multi-output training loop revisited\n",
     "for epoch in range(10):\n",
-    "for images, labels_alpha, labels_char \\\n",
-    "in dataloader_train:\n",
-    "\n",
-    "Two losses: for alphabets and characters\n",
-    "Final loss defined as sum of alphabet and\n",
-    "\n",
-    "optimizer.zero_grad()\n",
-    "\n",
-    "character losses:\n",
-    "\n",
-    "outputs_alpha, outputs_char = net(images)\n",
-    "\n",
-    "loss = loss_alpha + loss_char\n",
-    "\n",
-    "loss_alpha = criterion(\n",
-    "outputs_alpha, labels_alpha\n",
-    ")\n",
-    "\n",
-    "Both classification tasks deemed equally\n",
-    "important\n",
-    "\n",
-    "loss_char = criterion(\n",
-    "outputs_char, labels_char\n",
-    ")\n",
-    "loss = loss_alpha + loss_char\n",
-    "loss.backward()\n",
-    "optimizer.step()"
+    "    for images, labels_alpha, labels_char in dataloader_train:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs_alpha, outputs_char = net(images)\n",
+    "        loss = loss_alpha + loss_char\n",
+    "        loss_alpha = criterion(\n",
+    "            outputs_alpha, labels_alpha\n",
+    "        )\n",
+    "        loss_char = criterion(\n",
+    "            outputs_char, labels_char\n",
+    "        )\n",
+    "        loss = loss_alpha + loss_char\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
    ]
   },
   {
@@ -1687,59 +1507,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Varying task importance\n",
-    "Character classification 2 times more important than alphabet classification\n",
-    "Approach 1: Scale more important loss by a factor of 2\n",
+    "# Varying task importance\n",
+    "# Character classification 2 times more important than alphabet classification\n",
+    "# Approach 1: Scale more important loss by a factor of 2\n",
     "loss = loss_alpha + loss_char * 2\n",
-    "Approach 2: Assign weights that sum to 1\n",
-    "loss = 0.33 * loss_alpha + 0.67 * loss_char\n",
-    "\n",
-    "Warning: losses on different scales\n",
-    "Losses must be on the same scale before they are weighted and added\n",
-    "Example tasks:\n",
-    "Predict house price -> MSE loss\n",
-    "Predict quality: low, medium, high -> CrossEntropy loss\n",
-    "CrossEntropy is typically in the single-digits\n",
-    "MSE loss can reach tens of thousands\n",
-    "Model would ignore quality assessment task\n",
-    "Solution: Normalize both losses before weighting and adding\n",
+    "# Approach 2: Assign weights that sum to 1\n",
+    "loss = 0.33 * loss_alpha + 0.67 * loss_char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1194a424-8087-44ed-9d66-bbd2d91b0608",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Warning: losses on different scales\n",
+    "# Losses must be on the same scale before they are weighted and added\n",
+    "# Solution: Normalize both losses before weighting and adding\n",
     "loss_price = loss_price / torch.max(loss_price)\n",
     "loss_quality = loss_quality / torch.max(loss_quality)\n",
-    "loss = 0.7 * loss_price + 0.3 * loss_quality\n",
-    "\n",
-    "What you learned\n",
-    "1. Training robust neural networks\n",
-    "2. Images and convolutional neural networks\n",
-    "\n",
-    "PyTorch and OOP\n",
-    "Handling images with PyTorch\n",
-    "Optimizers\n",
-    "Training and evaluating convolutional networks\n",
-    "Vanishing and exploding gradients\n",
-    "\n",
-    "Data augmentation\n",
-    "3. Sequences and recurrent neural networks\n",
-    "4. Multi-input and multi-output architectures\n",
-    "\n",
-    "Handling sequences with PyTorch\n",
-    "\n",
-    "Multi-input models\n",
-    "\n",
-    "Training and evaluating recurrent networks\n",
-    "(LSTM and GRU)\n",
-    "\n",
-    "Multi-output models\n",
-    "Loss weighting\n",
-    "\n",
-    "What's next?\n",
-    "What you might consider learning next:\n",
-    "Transformers\n",
-    "Self-supervised learning\n",
-    "\n",
-    "Courses:\n",
-    "Deep Learning for Text with PyTorch\n",
-    "Deep Learning for Images with PyTorch\n",
-    "Efficient AI Model Training with PyTorch\n"
+    "loss = 0.7 * loss_price + 0.3 * loss_quality"
    ]
   }
  ],
